# agent-workspace

./: .gitignore  PR-1212-REVIEW.md  PR-1212-review.md  README.md
decision-lab/: .env.example  .gitignore  README.md  pyproject.toml
decision-lab/.claude/: CLAUDE.md
decision-lab/.claude/skills/create-agents/: SKILL.md
decision-lab/.claude/skills/create-dpack/: SKILL.md
decision-lab/.github/workflows/: workflow.yml
decision-lab/decision-packs/mmm/: README.md  config.yaml  deploy_modal.sh  environment.yaml
decision-lab/decision-packs/modal-example/: .env.example  README.md  config.yaml  deploy_modal.sh
decision-lab/decision-packs/poem/: config.yaml  print_result.sh  say_hi.sh
decision-lab/dlab/: __init__.py  cli.py  config.py  create_dpack.py  create_dpack_wizard.py  create_parallel_agent_wizard.py  docker.py  local.py  model_fallback.py  opencode_logparser.py  parallel_tool.py  session.py  timeline.py
decision-lab/dlab/data/: models.json
decision-lab/dlab/js/: parallel-agents.ts
decision-lab/dlab/tui/: __init__.py  app.py  log_watcher.py  models.py
decision-lab/docs/: cli-reference.md  decision-packs.md  docker.md  index.md  installation.md  log-processing.md  parallel-agents.md  sessions.md
decision-lab/skills/dlab-cli/: SKILL.md
decision-lab/tests/: conftest.py  test_cli.py  test_config.py  test_create_dpack.py  test_create_dpack_wizard.py  test_create_parallel_agent_wizard.py  test_docker.py  test_generate_dpack_integration.py  test_integration.py  test_model_fallback.py  test_opencode_logparser.py  test_parallel_tool.py  test_session.py
(+82 files in other folders)
