[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dlab-cli"
version = "0.1.3"
description = "A harness for agentic data science — run coding agents with domain skills, parallel subagents, and frozen Docker environments"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "DecisionAI"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "textual>=2.0",
    "modal>=0.70",
    "dhub-cli>=0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
dlab = "dlab.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dlab*"]

[tool.setuptools.package-data]
"dlab.data" = ["*.json"]
"dlab.js" = ["*.ts"]
